--- a/about.html
+++ b/about.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1> Đây là trang giới thiệu</h1>
+    <p>Nôi dung...</p>
+    <p>Nôi dung...</p>
+    <p>Nôi dung...</p>
+    <p>Nôi dung...</p>
 </body>
 </html>
