--- a/login.html
+++ b/login.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1> Đây là trang đăng nhập</h1>
+    <div> Đăng nhập bằng gg</div>
+    <div> Đăng nhập bằng ff</div>
 </body>
 </html>
